center section complete. Need footer section and need to fix h2 spacing in top section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -115,3 +115,54 @@ h2, h3, h4 {
   padding-bottom: 10px;
 
 }
+
+/* locations section */
+
+.location-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 500px;
+  width: 1200px;
+  background-image: url(../images/img-locations-background.jpg);
+}
+
+.location-content .top {
+  height: 10%;
+  display:flex;
+}
+
+.location-content .center {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.center .box {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 300px;
+  height: 300px;
+  background-color: black;
+}
+
+.center .box p {
+text-align: center;
+}
+
+
+
+.location-content .bottom {
+  height: 10%;
+}
+
+.top {
+  padding-bottom: 15px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: baseline;
+}
